lintian (2.2.9) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
       - wrong-section-according-to-package-name
    + Removed:
       - dev-package-should-be-section-libdevel
       - doc-package-should-be-section-doc
       - perl-package-should-be-section-perl
       - python-package-should-be-section-python
  
  * checks/deb-format.desc:
    + [RA] In the tag description, the first required element should be
      debian-binary, not debian-control.  Thanks, Judit Foglszinger.
      (Closes: #521012)
  * checks/fields{,.desc}:
    + [FL] Update list of valid sections.
    + [RA] Fix dbg-package-missing-depends check when the dependency is
      followed by a comma.  (Closes: #520640)
    + [FL] Add package name checks for the new sections.  Move all package
      section checks to one tag "wrong-section-according-to-package-name"
      instead of one tag per section.
  * checks/lintian.desc:
    + [CW] Add karmic as an allowable distribution for Ubuntu (thanks, Soren
      Hansen).
  * checks/scripts:
    + [RA] Fix a hash collision that could suppress a correct
      remove-of-unknown-diversion tag if the diversion was removed in
      multiple maintainer scripts including postrm.

  * collection/file-info:
    + [RA] Use chomp instead of chop to remove newlines.

  * data/changelog-file/ubuntu-dists:
    + [CW] Add karmic as an allowable distribution for Ubuntu (thanks, Soren
      Hansen).

  * debian/rules:
    + [RA] Remove and recreate debian/tests before runtests or check-tag to
      avoid spurious test failures from lingering old files.

  * frontend/lintian:
    + [RA] Belatedly bump the lab format version for many recent changes.

  * lib/Lintian/Command.pm:
    + [RA] In kill, initialize the result status and use &&= instead of |=.
      Partly addresses #521257.

  * unpack/unpack-srcpkg-l1:
    + [RA] Better anchor the regexes that parse the file list in a source
      package.
