@@ -1,0 +1,16 @@
+Source: {$srcpkg}
+Priority: extra
+Section: {$section}
+Maintainer: {$author}
+Standards-Version: 3.8.1
+Build-Depends: debhelper (>= 7)
+Vcs-Browser: svn.debian.org/wsvn/foobar/trunk
+Vcs-Svn: svn+ssh://svn.debian.org/svn/foobar/trunk
+
+Package: {$srcpkg}
+Architecture: {$architecture}
+Depends: $\{misc:Depends\}
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
